[package]
name = "cch23-martinsodabi19"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-macros = "0.4.0"
base64 = "0.21.5"
cch23-validator = "15.0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
shuttle-axum = "0.34.0"
shuttle-runtime = "0.34.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
